	* Breaking API so that we now hide internal data structures.

2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.11
*******************************************************************************

2011-02-07 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Major bug fix in IPv6 code.

	Major bug fix in miniserver.c for IPv6, bug was introduced when
	changing implementation of get_port in November 20th 2010 ("gena:fix
	several compiler warnings" commit).

2011-02-11 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix for incorrectly exported include files.

	The files FreeList.h, LinkedList.h, ThreadPool.h and TimerThread.h
	from the threautil library were being installed in the include
	directory of the library, incorrectly exposing internal data structure
	of the library.

2011-01-30 Chandra Penke <chandrapenke(at)mcntech.com>

	Fix for compilation warnings of unused variables in upnpdebug.c in
	release builds.

2011-01-20 Chandra Penke <chandrapenke(at)mcntech.com>

	Fix for Race condition can hang miniserver thread.

	Add 'requiredThreads' field to the ThreadPool structure, to avoid
	a race condition when waiting for a new thread to be created. The
	race condition occurs when a thread is destroyed while the master
	thread is waiting for a new thread to be created.

	Thanks to Chuck Thomason for pointing the problem.

	Summary: Race condition can hang miniserver thread - ID: 3158591

	Details:
	Hello,

	I have found a race condition in the thread pool handling of
	libupnp-1.6.6 that periodically results in the miniserver thread
	getting blocked infinitely.

	In my setup, I have the miniserver thread pool configured with 1
	job per thread, 2 threads minimum, and 50 threads maximum.

	Just before the lockup occurs, the miniserver thread pool contains